use custom fixed class so that it won't 'jump' when loading in chrome.

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -14,6 +14,17 @@
     @include grid-column(12);
 }
 
+.nav-fixed{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+    left: 0;
+}
+
+main{
+    padding-top: 46px; //navbar height
+}
 
 /* ie9 fix for svg */
 .ie9 img[src*=".svg"] {
@@ -96,9 +107,8 @@ main{
 }
 
 
-//HOME:
-//
-//home header
+
+//header
 
 .jumbotron{
     //@include grid-row();
@@ -107,9 +117,9 @@ main{
 //background-image: repeating-linear-gradient(-45deg, transparent, transparent 5px, rgba(0,0,0,.8) 5px, rgba(0,0,0,.8) 6px);
 
   
-  @include home_bg;
   
-
+  
+  padding: 1.5rem 0;
   color: rgba(255, 255, 255, 0.8);
   position: relative;
   margin-bottom: 2rem;
@@ -130,7 +140,23 @@ main{
   }
 }
 
-//home about
+#page-home .jumbotron{
+    @include home_bg;
+}
+
+#page-about .jumbotron{
+background:
+linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+background-color: #131313;
+background-size: 20px 20px;
+}
+
+//about list grid
 
 .about-list{
     
